# elang

./: .DEPS.git  .gitignore  .gitmodules  BUILD.gn  DEPS  README.md
elang/: BUILD.gn  CPPLINT.cfg
elang/api/: BUILD.gn  README.md  machine_code_builder.cc  machine_code_builder.h  pass.cc  pass.h  pass_controller.cc  pass_controller.h  pass_observer.cc  pass_observer.h  source_code_location.cc  source_code_location.h
elang/base/: BUILD.gn  as_printable.cc  as_printable.h  as_printable_test.cc  atomic_string.cc  atomic_string.h  atomic_string_factory.cc  atomic_string_factory.h  atomic_string_test.cc  atomic_string_unittest.cc  base_export.h  bit_set.cc  bit_set.h  bit_set_test.cc  bits.h  bits_unittest.cc  castable.h  castable_test.cc  castable_unittest.cc  disjoint_sets.h  disjoint_sets_unittest.cc  double_linked.h  double_linked_test.cc  double_linked_unittest.cc  embedded_container.h  float_types.h  index_sequence.h  iterator_on_iterator.h  iterator_on_iterator_test.cc  liveness.cc  liveness.h  liveness_builder.cc  liveness_builder.h  liveness_builder_unittest.cc  liveness_collection.h  logging_win.h  maybe.h  ordered_list.h  ordered_list_test.cc  ordered_list_unittest.cc  (+26 more)
elang/base/analysis/: data_flow_solver.h  data_flow_solver_test.cc  dominator_tree.h  dominator_tree_builder.h  dominator_tree_test.cc  dominator_tree_unittest.cc  liveness.cc  liveness.h  liveness_builder.cc  liveness_builder.h  liveness_builder_test.cc  liveness_builder_unittest.cc  liveness_collection.h  liveness_editor.cc  liveness_editor.h  loop_tree.h  loop_tree_builder.h  loop_tree_builder_old.h  loop_tree_test.cc
elang/base/graph/: graph.h  graph_editor.h  graph_unittest.cc
elang/base/graphs/: flow_graph.h  graph.h  graph_editor.h  graph_sorter.h  graph_test.cc  graph_test.h  graph_test_support.cc  graph_test_support.h  graph_unittest.cc
elang/cg/: BUILD.gn  generator.cc  generator.h  generator_x64.cc  generator_x64_unittest.cc
elang/cg/testing/: cg_test.cc  cg_test.h
elang/compiler/: BUILD.gn  character_stream.cc  character_stream.h  compilation_session.cc  compilation_session.h  compilation_session_user.cc  compilation_session_user.h  compilation_unit.cc  compilation_unit.h  compile.cc  error_sink.cc  error_sink.h  lexer.cc  lexer.h  lexer_unittest.cc  modifier.h  modifiers.cc  modifiers.h  modifiers_builder.cc  modifiers_builder.h  name_resolver.cc  name_resolver.h  name_resolver_unittest.cc  namespace_builder.cc  namespace_builder.h  parameter_kind.cc  parameter_kind.h  parse_expression.cc  parse_statement.cc  parse_type.cc  parser.cc  parser.h  parser_unittest.cc  predefined_names.cc  predefined_names.h  qualified_name.cc  qualified_name.h  semantics.cc  semantics.h  source_code.cc  (+21 more)
elang/compiler/analysis/: BUILD.gn  (+48 more)
elang/hir/: BUILD.gn  atomic_string.cc  atomic_string.h  basic_block_editor.cc  basic_block_editor.h  class.cc  class.h  editor.cc  editor.h  editor_unittest.cc  error_code.h  error_data.cc  error_data.h  error_reporter.cc  error_reporter.h  factory.cc  factory.h  factory_config.h  factory_user.cc  factory_user.h  function_editor.cc  function_editor.h  hir_export.h  instruction_factory.cc  instruction_factory.h  instruction_visitor.cc  instruction_visitor.h  instructions.cc  instructions.h  instructions_forward.h  instructions_unittest.cc  intrinsic_names.cc  intrinsic_names.h  namespace.cc  namespace.h  namespace_member.cc  namespace_member.h  node.cc  node.h  operand_visitor.cc  (+26 more)
elang/lir/: BUILD.gn  README.md  code_emitter.cc  code_emitter.h  code_emitter_x64.cc  code_emitter_x64_unittest.cc  disasm_x64.cc  disasm_x64.h  dump_function_pass.cc  dump_function_pass.h  editor.cc  editor.h  editor_owner.cc  editor_owner.h  editor_test.cc  editor_unittest.cc  editor_user.cc  editor_user.h  error_code.h  error_data.cc  error_data.h  error_reporter.cc  error_reporter.h  error_sink.cc  error_sink.h  factory.cc  factory.h  factory_user.cc  factory_user.h  factory_x64.cc  generate_machine_code.cc  instruction_visitor.cc  instruction_visitor.h  instructions.cc  instructions.h  instructions_forward.h  instructions_test.cc  instructions_unittest.cc  instructions_x64.cc  instructions_x64.h  (+37 more)
elang/optimizer/: BUILD.gn  depth_first_traversal.cc  depth_first_traversal.h  editor.cc  editor.h  editor_test.cc  error_code.h  error_data.cc  error_data.h  error_reporter.cc  error_reporter.h  error_sink.cc  error_sink.h  factory.cc  factory.h  factory_config.h  factory_user.cc  factory_user.h  function.cc  function.h  function_test.cc  node_cache.cc  node_cache.h  node_factory.cc  node_factory.h  node_factory_user.cc  node_factory_user.h  node_printers.cc  node_visitor.cc  node_visitor.h  nodes.cc  nodes.h  nodes_forward.h  nodes_test.cc  opcode.h  optimizer_export.h  sequence_id_source.cc  sequence_id_source.h  thing.h  thing_printer.cc  (+13 more)
elang/samples/: quick_sort.e
elang/shell/: BUILD.gn  compiler.cc  compiler.h  disasm.h  disasm_x64.cc  namespace_builder.cc  namespace_builder.h  node_query.cc  node_query.h  pass_record.cc  pass_record.h  shell_main.cc  source_file_stream.cc  source_file_stream.h  utf8_decoder.cc  utf8_decoder.h  utf8_decoder_unittest.cc
elang/targets/: BUILD.gn  bytes.cc  bytes.h  bytes_test.cc  instruction_x64.cc  instruction_x64.h  instruction_x64_test.cc  instructions_x64.h  operand_x64.cc  operand_x64.h  operand_x64_test.cc  register_x64.cc  register_x64.h  register_x64_test.cc  target_features.h
elang/tools/: pre-commit.py
elang/translator/: BUILD.gn  translator.cc  translator.h  translator_x64.cc  translator_x64_test.cc
elang/vm/: BUILD.gn  class.cc  class.h  collectable.cc  collectable.h  entry_point.h  factory.cc  factory.h  machine_code_annotation.h  machine_code_builder_impl.cc  machine_code_builder_impl.h  machine_code_builder_impl_unittest.cc  machine_code_collection.cc  machine_code_collection.h  machine_code_function.cc  machine_code_function.h  memory_pool.cc  memory_pool.h  namespace.cc  namespace.h  namespace_member.cc  namespace_member.h  namespace_unittest.cc  node.cc  node.h  object_factory.cc  object_factory.h  objects.cc  objects.h
(+390 files in other folders)
