# Copyright 2014-2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//elang/build/elang_target_arch.gni")
import("//testing/test.gni")

group("elang") {
  deps = [
    "//elang/optimizer",
    "//elang/shell",
    "//elang/vm",
  ]
}

group("elang_target_arch") {
  public_configs = [ ":elang_target_arch_config" ]
}

config("elang_target_arch_config") {
  if (elang_target_arch == "x64") {
    defines = [ "ELANG_TARGET_ARCH_X64" ]
  }
}

group("tests") {
  visibility = []
  testonly = true
  deps = [
    "//elang/base:tests",
    "//elang/cg:tests",
    "//elang/hir:tests",
    "//elang/lir:tests",
    "//elang/optimizer:tests",
    "//elang/shell:tests",
    "//elang/targets:tests",
    "//elang/vm:tests",
  ]
}
