# Copyright 2014-2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("api") {
  output_name = "elang_api"
  sources = [
    "machine_code_builder.cc",
    "machine_code_builder.h",
    "source_code_location.cc",
    "source_code_location.h",
  ]

  defines = [ "ELANG_API_IMPLEMENTATION" ]

  public_deps = [
    "//base"
  ]
}
