# Copyright 2014 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("compiler") {
  sources = [
    "cg/hir_generator.cc",
    "cg/hir_generator.h",
    "character_stream.h",
    "character_stream.cc",
    "compilation_session.cc",
    "compilation_session.h",
    "compilation_unit.cc",
    "compilation_unit.h",
    "modifiers.cc",
    "modifiers.h",
    "modifiers_builder.cc",
    "modifiers_builder.h",
    "predefined_names.cc",
    "predefined_names.h",
    "public/compiler_error_code.h",
    "public/compiler_error_data.cc",
    "public/compiler_error_data.h",
    "qualified_name.cc",
    "qualified_name.h",
    "source_code.cc",
    "source_code.h",
    "source_code_position.cc",
    "source_code_position.h",
    "source_code_range.cc",
    "source_code_range.h",
    "string_source_code.cc",
    "string_source_code.h",
    "string_stream.h",
    "string_stream.cc",
    "syntax/lexer.cc",
    "syntax/lexer.h",
    "syntax/parser.cc",
    "syntax/parser.h",
    "syntax/parse_expression.cc",
    "syntax/parse_statement.cc",
    "syntax/parse_type.cc",
    "token.cc",
    "token.h",
    "token_data.cc",
    "token_data.h",
    "token_factory.cc",
    "token_factory.h",
    "token_type.cc",
    "token_type.h",
  ]

  deps = [
    "//base",
    "//elang/base",
    "//elang/compiler/analyze",
    "//elang/compiler/ast",
  ]
}

source_set("compiler_test") {
  testonly = true
  sources = [
    "testing/compiler_test.cc",
    "testing/compiler_test.h",
    "testing/formatter.cc",
    "testing/formatter.h",
  ]
  public_deps = [
    ":compiler",
    "//testing/gtest",
  ]
}

test("compiler_unittests") {
  sources = [
    "syntax/lexer_unittest.cc",
    "syntax/parser_unittest.cc",
    "token_unittest.cc",
  ]

  deps = [
    "//base/test:run_all_unittests",
    "//elang/compiler/analyze:compiler_analyze_test",
    ":compiler_test",
  ]
}
