# Copyright 2014-2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//testing/test.gni")

static_library("compiler") {
  sources = [
    "character_stream.h",
    "character_stream.cc",
    "compilation_session.cc",
    "compilation_session.h",
    "compilation_session_user.cc",
    "compilation_session_user.h",
    "compilation_unit.cc",
    "compilation_unit.h",
    "compile.cc",
    "modifiers.cc",
    "modifiers.h",
    "modifiers_builder.cc",
    "modifiers_builder.h",
    "parameter_kind.h",
    "parameter_kind.cc",
    "predefined_names.cc",
    "predefined_names.h",
    "public/compiler_error_code.h",
    "public/compiler_error_data.cc",
    "public/compiler_error_data.h",
    "semantics.cc",
    "semantics.h",
    "source_code.cc",
    "source_code.h",
    "source_code_position.cc",
    "source_code_position.h",
    "source_code_range.cc",
    "source_code_range.h",
    "string_source_code.cc",
    "string_source_code.h",
    "string_stream.h",
    "string_stream.cc",
    "syntax/lexer.cc",
    "syntax/lexer.h",
    "syntax/parser.cc",
    "syntax/parser.h",
    "syntax/parse_expression.cc",
    "syntax/parse_statement.cc",
    "syntax/parse_type.cc",
    "token.cc",
    "token.h",
    "token_data.cc",
    "token_data.h",
    "token_factory.cc",
    "token_factory.h",
    "token_type.cc",
    "token_type.h",
  ]

  deps = [
    "//base",
    "//elang/base",
    "//elang/compiler/analysis",
    "//elang/compiler/ast",
    "//elang/compiler/cg",
  ]
}

source_set("compiler_test") {
  testonly = true
  sources = [
    "testing/analyzer_test.cc",
    "testing/analyzer_test.h",
    "testing/compiler_test.cc",
    "testing/compiler_test.h",
    "testing/formatter.cc",
    "testing/formatter.h",
    "testing/namespace_builder.cc",
    "testing/namespace_builder.h",
  ]
  public_deps = [
    ":compiler",
    "//testing/gtest",
  ]
}

test("elang_compiler_tests") {
  sources = [
    "syntax/lexer_unittest.cc",
    "syntax/parser_unittest.cc",
    "token_unittest.cc",
  ]

  deps = [
    "//base/test:run_all_unittests",
    "//elang/compiler/analysis:compiler_analysis_test",
    "//elang/compiler/cg:compiler_cg_test",
    "//elang/compiler/semantics:compiler_semantics_test",
    ":compiler_test",
  ]
}
