# Copyright 2014 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("hir") {
  sources = [
    "basic_block_editor.cc",
    "basic_block_editor.h",
    "factory.cc",
    "factory.h",
    "formatters/text_formatter.cc",
    "formatters/text_formatter.h",
    "function_editor.cc",
    "function_editor.h",
    "instructions.cc",
    "instructions.h",
    "instruction_factory.cc",
    "instruction_factory.h",
    "types.cc",
    "types.h",
    "type_factory.cc",
    "type_factory.h",
    "type_visitor.cc",
    "type_visitor.h",
    "values.cc",
    "values.h",
    "values_forward.h",
    "value_visitor.cc",
    "value_visitor.h",
  ]

  deps = [
    "//base",
    "//elang/base",
  ]
}

test("elang_hir_unittests") {
  sources = [
    "instructions_unittest.cc",
    "types_unittest.cc",
    "values_unittest.cc",
  ]

  deps = [
    ":hir",
    "//base/test:run_all_unittests",
  ]
}
