# Copyright 2014-2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

component("hir") {
  output_name = "elang_hir"
  sources = [
    "editor.cc",
    "editor.h",
    "factory.cc",
    "factory.h",
    "formatters/text_formatter.cc",
    "formatters/text_formatter.h",
    "hir_export.h",
    "instructions.cc",
    "instructions.h",
    "instruction_factory.cc",
    "instruction_factory.h",
    "types.cc",
    "types.h",
    "type_factory.cc",
    "type_factory.h",
    "type_visitor.cc",
    "type_visitor.h",
    "values.cc",
    "values.h",
    "values_forward.h",
    "value_visitor.cc",
    "value_visitor.h",
  ]

  defines = [ "HIR_IMPLEMENTATION" ]

  deps = [
    "//base",
    "//elang/base",
  ]
}

source_set("hir_unittests") {
  testonly = true
  sources = [
    "instructions_unittest.cc",
    "types_unittest.cc",
    "values_unittest.cc",
  ]
  public_deps = [
    "//testing/gtest",
    ":hir",
  ]
}

test("elang_hir_unittests") {
  deps = [
    "//base/test:run_all_unittests",
    ":hir_unittests",
  ]
}
