# Copyright 2014-2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("elang_shell") {
  sources = [
    "compiler.cc",
    "compiler.h",
    "shell_main.cc",
  ]

  deps = [
    "//base",
    "//elang/api",
    "//elang/compiler",
    "//elang/cg",
    "//elang/vm",
    ":shell_library",
  ]
}

static_library("shell_library") {
  sources = [
    "namespace_builder.cc",
    "namespace_builder.h",
    "node_query.cc",
    "node_query.h",
    "source_file_stream.cc",
    "source_file_stream.h",
    "utf8_decoder.cc",
    "utf8_decoder.h",
  ]
}

source_set("shell_tests") {
  sources = [
    "utf8_decoder_unittest.cc",
  ]
  public_deps = [
    "//testing/gtest",
    ":shell_library",
  ]
}

group("shell") {
  deps = [
    ":elang_shell",
  ]
}
